--- a/src/components/stickyProductHeader/StickyProductHeader.scss
+++ b/src/components/stickyProductHeader/StickyProductHeader.scss
@@ -13,7 +13,7 @@
 	background-color: $bg-color-solarizedLight;
 	color: #1d1d1d;
 	box-shadow: -1px 4px 10px 0px rgb(0 0 0 / 25%);
-	z-index: 100;
+	z-index: 3;
 	opacity: 1;
 	transition: 0.3s ease-in-out;
 
